--- a/public/css/register.css
+++ b/public/css/register.css
@@ -12,7 +12,7 @@
       align-items: center;
       min-height: 100vh;
       position: relative;
-      overflow: hidden;
+      /* overflow: hidden; */
     }
 
     .circle {
