--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@
     display:grid;
     place-items:center;
     color:#0e2a47;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .circle {
